Refactor to unified LiteLLM service supporting multiple AI providers
- Add LiteLLMService.cs supporting OpenAI, Anthropic, Gemini, Ollama, and custom endpoints
- Replace provider-specific services with unified configuration-driven approach
- Update appsettings.json with LiteLLM configuration
- Add LITELLM_CONFIG.md with comprehensive setup examples
- Support for popular models: GPT-4, Claude, Gemini, Llama, Mistral, DeepSeek, Qwen
- Auto-detect provider from model name
- Maintain backward compatibility with mock service fallback

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,16 +1,11 @@
 {
-    "OpenAI": {
+    "LiteLLM": {
         "Model": "gpt-3.5-turbo",
+        "ApiKey": "your-api-key-here",
         "MaxTokens": 150,
-        "Temperature": 0.7
-    },
-    "Gemini": {
-        "Model": "gemini-1.5-flash",
-        "MaxTokens": 150,
-        "Temperature": 0.7
-    },
-    "AI": {
-        "Provider": "Gemini"
+        "Temperature": 0.7,
+        "BaseUrl": "",
+        "OllamaUrl": "http://localhost:11434/"
     },
     "Logging": {
         "LogLevel": {
